# openpond

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.githooks/: pre-push
docs/: gpt-5-6-null-html-comment-investigation.md  subagent-lifecycle-working-notes.md
packaging/: README.md
python/openpond-training/: pyproject.toml
python/openpond-training/src/openpond_training/: artifacts.py  contracts.py  dataset_worker.py  events.py  fixture_model.py  inference.py  model_manager.py  model_runtime.py  ppo_worker.py  training_projection.py  worker.py
python/openpond-training/src/openpond_training/fixtures/: golden.json
python/openpond-training/src/openpond_training/schemas/: dpo-recipe.schema.json  dpo-training-record.schema.json  policy-training-record.schema.json  ppo-recipe.schema.json  sft-recipe.schema.json  sft-training-record.schema.json  taskset.schema.json  training-artifact.schema.json  training-bundle.schema.json  training-job-event.schema.json
python/openpond-training/tests/: test_contracts.py  test_dataset_worker.py  test_inference_protocol.py  test_training_projection.py  test_worker_smoke.py
scripts/: after-pack.cjs  benchmark-turn-runtime-queries.ts  build-cli-release.ts  build-compiled-cli.ts  capture-optimization-baseline.ts  check-cli-distribution.ts  check-desktop-package-budgets.ts  check-electron-runtime.ts  check-node-toolchain.ts  check-performance-budgets.ts  check-production-entrypoints.ts  check-release-version.ts  check-repository-hygiene.ts  (+33 more)
(+1986 files in other folders)
