[project]
name = "openpond-training"
version = "0.0.1"
description = "OpenPond provider-neutral local training worker"
requires-python = ">=3.10,<3.13"
dependencies = [
  "datasets==4.4.1",
  "jsonschema==4.25.1",
  "huggingface-hub==0.36.2",
  "peft==0.18.0",
  "safetensors==0.7.0",
  "torch==2.9.1",
  "tokenizers==0.22.1",
  "transformers==4.57.3",
  "trl==0.26.2",
]

[project.scripts]
openpond-training = "openpond_training.worker:main"
openpond-models = "openpond_training.model_manager:main"
openpond-inference = "openpond_training.inference:main"

[dependency-groups]
dev = ["pytest==9.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openpond_training"]

[tool.hatch.build.targets.wheel.force-include]
"src/openpond_training/schemas" = "openpond_training/schemas"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
